# drv_chip_gd32e11x

./: BUILD.gn
inc/: drv_chip.h  drv_flash.h  drv_gpio.h  drv_rcu.h  drv_rtc.h
include/: drv_chip.h  drv_flash.h  drv_pmu.h
src/: drv_flash.c  drv_gpio.c  drv_pmu.c  drv_rcu.c  drv_rtc.c  startup_gd32e11x.c
