declare_args() {
  drv_chip_without_irq = false
}

pkggroup("gd32e11x_firmware") {
}

pkggroup("mds") {
}

config("drv_chip_gd32e11x_cfg") {
  include_dirs = [ "include/" ]
}

static_library("drv_chip_gd32e11x") {
  sources = [
    "src/drv_flash.c",
    "src/drv_gpio.c",
    "src/drv_pmu.c",
    "src/drv_rcu.c",
    "src/drv_rtc.c",
    "src/startup_gd32e11x.c",

    # "src/drv_i2c.c",
  ]

  defines = []

  if (defined(drv_chip_without_irq) && drv_chip_without_irq) {
    defines += [ "DRV_CHIP_WITHOUT_IRQ=1" ]
  }

  public_deps = [
    ":gd32e11x_firmware",
    ":mds",
  ]

  public_configs = [ ":drv_chip_gd32e11x_cfg" ]
}
